--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Jean Dagenais
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Performance Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
-#
+# https://github.com/JeanDagenais/jeandagenais.github.io.git
 
 # Includes an icon in the footer for each username you enter
 footer-links:
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: JeanDagenais/jeandagenais.github.io.git
   instagram:
   linkedin:
   pinterest:
