--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jean Dagenais
+name: Machine Learning Performance Engineering
 
 # Short bio or description (displayed in the header)
-description: Performance Engineer - WFC
+description: Performance Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
