--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Machine Learning Performance Engineering
+name: Performance Engineering for Machine Learning
 
 # Short bio or description (displayed in the header)
 description: Performance Engineer
